Fixed the width of name display on mobile

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -128,6 +128,7 @@
     .profile__name {
         font-size: 22px;
         line-height: 27px;
+        max-width: 200px;
     }
     .profile__tag {
         margin: 0 auto 36px auto;
